html/themes/custom/common_design_subtheme/css/brand.css
:root {
  /**
   * Site-specific brand colors
   *
   * Set these variables and the CD Header/Footer will re-color to your brand.
   *
   * In the future the Component library will adhere to these vars as well.
   */
  /* OCHA blue is one colour ramp darker than brand blue */
  --cd-ocha-blue: #1f69b3;
  --brand-primary: #1f69b3;
  /* Brighter blue is two colour ramps higher than brand blue */
  --cd-blue--brighter: #82b5e9;
  --brand-primary--light: var(--cd-blue--brighter);
  /* Dark blue is two colour ramps darker than brand blue */
  --brand-primary--dark: #144372;
  --brand-highlight: #E56A54;
  /* https: //polypane.app/color-contrast/#fg=%23fff&bg=%23E56A54&level=aa&format=hex&algo=WCAG2&filter=none */
  /* --brand-highlight: #d64200; */
  --brand-highlight-contrast: #000;
  --brand-grey: #f5f5f5;
  --brand-grey--border: #ccc;
  --brand-grey--text: #767676;
  --brand-logo-width: 186px;
  --brand-default-text-color: #444;

/**
  * Site logos
  *
  * Specify the logo paths/dimentions here. The URL is relative to
  * common_design_subtheme/components/cd/cd-header/cd-logo.css
  */
  --brand-logo-mobile-width: 52px;
  --brand-logo-desktop-width: 186px;
}

